Fix visitor stats layout: wrap busuanzi containers to preserve flex layout

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -107,7 +107,8 @@
   padding: 8px 12px;
   border-bottom: 1px solid rgba($border-color, 0.5);
 
-  &:last-child {
+  &:last-child,
+  #busuanzi_container_site_uv & {
     border-bottom: none;
   }
 }
